Fix TWSReleaseNotesDownloadOperation completion block - changed main background image view content mode

--- a/TWSReleaseNotesViewSample/TWSReleaseNotesViewSample/RootViewController.xib
+++ b/TWSReleaseNotesViewSample/TWSReleaseNotesViewSample/RootViewController.xib
@@ -38,13 +38,12 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="154019493">
 						<reference key="NSNextResponder" ref="829661641"/>
-						<int key="NSvFlags">274</int>
+						<int key="NSvFlags">306</int>
 						<string key="NSFrameSize">{320, 568}</string>
 						<reference key="NSSuperview" ref="829661641"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="711453795"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<int key="IBUIContentMode">2</int>
+						<int key="IBUIContentMode">5</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -57,7 +56,7 @@
 						<int key="NSvFlags">269</int>
 						<string key="NSFrame">{{60, 492}, {200, 36}}</string>
 						<reference key="NSSuperview" ref="829661641"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="58664234">
 							<int key="NSColorSpace">3</int>
@@ -100,7 +99,6 @@
 						<int key="NSvFlags">269</int>
 						<string key="NSFrame">{{60, 440}, {200, 36}}</string>
 						<reference key="NSSuperview" ref="829661641"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="579886370"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="58664234"/>
@@ -123,7 +121,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 568}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="154019493"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -264,46 +261,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">12</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">RootViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="showLocalButtonPressed:">id</string>
-						<string key="showRemoteButtonPressed:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="showLocalButtonPressed:">
-							<string key="name">showLocalButtonPressed:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="showRemoteButtonPressed:">
-							<string key="name">showRemoteButtonPressed:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="localButton">UIButton</string>
-						<string key="remoteButton">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="localButton">
-							<string key="name">localButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="remoteButton">
-							<string key="name">remoteButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/RootViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
